objects/Tender_Snapshots__c.object
<CustomObject>
    <description>This object is used for snapshot reporting on Tenders</description>
    <fields>
        <fullName>Application_Platform__c</fullName>
        <label>Application / Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>High Speed</fullName>
                </value>
                <value>
                    <fullName>Locomotive</fullName>
                </value>
                <value>
                    <fullName>LRV</fullName>
                </value>
                <value>
                    <fullName>Metro</fullName>
                </value>
                <value>
                    <fullName>Multiple Unit/Carriage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator_Region__c</fullName>
        <label>Operator Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA (excl. India)</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Asia (excl. China and Japan)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAM_Total__c</fullName>
        <label>PAM Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TAM_Total__c</fullName>
        <label>TAM Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tender</label>
        <referenceTo>Tender__c</referenceTo>
        <relationshipLabel>Tender Snapshots</relationshipLabel>
        <relationshipName>Tender_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tender Snapshot</label>
    <nameField>
        <label>Tender Snapshots Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tender Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>